# fcitx5-vinput

./: .gitignore  CMakeLists.txt
data/: default-config.json
src/addon/: CMakeLists.txt
src/addon/core/: vinput.cpp  vinput.h
src/addon/dbus/: vinput_dbus.cpp
src/addon/hud/: vinput_cat_hud.py
src/common/: CMakeLists.txt  config.h.in  i18n.cpp  i18n.h
src/common/config/: core_config_json.cpp  core_config_types.h  core_config_validate.cpp
src/common/llm/: adapter_manager.cpp  adapter_manager.h
src/common/registry/: registry_models.cpp
src/common/utils/: file_utils.cpp  path_utils.cpp  process_utils.cpp  process_utils.h
src/daemon/asr/runtime/: backend_factory.cpp  recognition_session_manager.cpp
src/gui/: CMakeLists.txt
src/gui/pages/resources/: resource_page.cpp
src/gui/utils/: runtime_bridge.cpp  runtime_bridge.h
src/windows/: CMakeLists.txt
src/windows/app/: doubao_smoke_test.cpp  main.cpp  mainwindow.cpp  mainwindow.h  windows_control_page.cpp  windows_control_page.h
src/windows/runtime/: audio_recorder.cpp  audio_recorder.h  doubao_asr_client.cpp  doubao_asr_client.h  global_hotkey.cpp  global_hotkey.h  status_hud.cpp  status_hud.h  text_corrector.cpp  text_corrector.h  text_injector.cpp  text_injector.h  voice_input_controller.cpp  voice_input_controller.h
